2011-08-09  Alan Modra  <amodra@gmail.com>

	PR ld/13066
	* plugin.c (add_symbols): Revert 2011-08-05.

2011-08-06  Kai Tietz  <ktietz@redhat.com>

	* scripttempl/pep.sc: Add .debug_macro section.
	* scripttempl/pe.sc: Likewise.

2011-08-05  Alan Modra  <amodra@gmail.com>

	PR ld/12762
	* plugin.c (add_symbols): Exclude comdat_key symbols from symbol
	table if already seen.

2011-08-04  H.J. Lu  <hongjiu.lu@intel.com>

	* ldmain.c (main): Replace remove_output with ld_cleanup in
	comments.

2011-07-26  Alan Modra  <amodra@gmail.com>

	* emulparams/elf32ppc.sh: Source plt_unwind.sh.
	* emulparams/elf64ppc.sh: Likewise.
	* emultempl/ppc32elf.em (OPTION_NO_TLS_OPT): Adjust.
	(PARSE_AND_LIST_PROLOGUE, PARSE_AND_LIST_LONGOPTS,
	PARSE_AND_LIST_OPTIONS, PARSE_AND_LIST_ARGS_CASES): Append to
	existing values.
	* emultempl/ppc64elf.em (OPTION_STUBGROUP_SIZE): Adjust.
	(PARSE_AND_LIST_PROLOGUE, PARSE_AND_LIST_LONGOPTS,
	PARSE_AND_LIST_OPTIONS, PARSE_AND_LIST_ARGS_CASES): Append to
	existing values.

2011-07-22  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (ALL_64_EMULATIONS): Add eelf_k1om.o and
	eelf_k1om_fbsd.o
	(eelf_k1om.c): New.
	(eelf_k1om_fbsd.c): Likewise.
	* Makefile.in: Regenerated.

	* configure.tgt (targ64_extra_emuls): Add elf_k1om if elf_x86_64
	is supported.  Add elf_k1om_fbsd if elf_x86_64_fbsd is supported.
	(targ_extra_emuls): Likewise.

	* emulparams/elf_k1om.sh: New.
	* emulparams/elf_k1om_fbsd.sh: Likewise.

2011-07-16  Roland McGrath  <roland@hack.frob.com>

	* ld.h (args_type): New field print_output_format.
	* lexsup.c (enum option_values, ld_options, parse_args):
	Handle --print-output-format.
	* ldmain.c (main): Implement --print-output-format.
	* ld.texinfo (Options): Document it.

	* ldlang.c (lang_get_output_target): Don't return current_target
	when it's NULL.

2011-07-15  Alan Modra  <amodra@gmail.com>

	* Makefile.am (e*.c): Sort.
	* Makefile.in: Regenerate.

2011-07-14  Alan Modra  <amodra@gmail.com>
